# IndexAndQueryProcessing

./: CMakeLists.txt  README.md  data_generator.h  database.h  explanation.txt  macrobenchmark.cpp  microbenchmarks.cpp  partner.txt  solution.c  solution.h  tests.cpp
